syntax = "proto3";

package swiftsignals.user.v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/COS301-SE-2025/Swift-Signals/protos/gen/swiftsignals/user/v1";

service UserService {
  rpc RegisterUser(RegisterUserRequest) returns (UserResponse);
  rpc LoginUser(LoginUserRequest) returns (LoginUserResponse);
  rpc LogoutUser(UserIDRequest) returns (google.protobuf.Empty);
  rpc GetUserByID(UserIDRequest) returns (UserResponse);
  rpc GetUserByEmail(GetUserByEmailRequest) returns (UserResponse);
  rpc GetAllUsers(GetAllUsersRequest) returns (stream UserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UserResponse);
  rpc DeleteUser(UserIDRequest) returns (google.protobuf.Empty);
  rpc GetUserIntersectionIDs(UserIDRequest)
      returns (stream IntersectionIDResponse);
  rpc AddIntersectionID(AddIntersectionIDRequest)
      returns (google.protobuf.Empty);
  rpc RemoveIntersectionIDs(RemoveIntersectionIDRequest)
      returns (google.protobuf.Empty);
  rpc ChangePassword(ChangePasswordRequest) returns (google.protobuf.Empty);
  rpc ResetPassword(ResetPasswordRequest) returns (google.protobuf.Empty);
  rpc MakeAdmin(AdminRequest) returns (google.protobuf.Empty);
  rpc RemoveAdmin(AdminRequest) returns (google.protobuf.Empty);
}

message UserIDRequest { string user_id = 1; }

message RegisterUserRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

message LoginUserRequest {
  string email = 1;
  string password = 2;
}

message GetUserByEmailRequest { string email = 1; }

message GetAllUsersRequest {
  int32 page = 1;
  int32 page_size = 2;
  string filter = 3;
}

message UpdateUserRequest {
  string user_id = 1;
  string name = 2;
  string email = 3;
}

message IntersectionIDResponse { string intersection_id = 1; }

message AddIntersectionIDRequest {
  string user_id = 1;
  string intersection_id = 2;
}

message RemoveIntersectionIDRequest {
  string user_id = 1;
  repeated string intersection_id = 2;
}

message ChangePasswordRequest {
  string user_id = 1;
  string current_password = 2;
  string new_password = 3;
}

message ResetPasswordRequest { string email = 1; }

message AdminRequest {
  string user_id = 1;
  string admin_user_id = 2;
}

message UserResponse {
  string id = 1;
  string name = 2;
  string email = 3;
  bool is_admin = 4;
  repeated string intersection_ids = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message LoginUserResponse {
  string token = 1;
  google.protobuf.Timestamp expires_at = 3;
}
